// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MigrationStateModal /> snapshots Completely failed 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-11-desc"
    aria-labelledby="modal-11-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-11-title"
            >
              Migration end
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-11-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrating from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="wrapper"
          >
            <div
              class="title"
            >
              Quick summary
            </div>
            <div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Articles
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-12-0-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    12
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-12-0-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    12
                  </div>
                </div>
              </div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Categories
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-12-1-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    7
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-12-1-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    7
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-2"
          />
          <div
            class="wrapper"
          >
            <div
              class="header"
            >
              <div
                class="badge headerCountBadge upperCase"
                style="border-radius: 100px;"
              >
                <i
                  class="material-icons mr-2"
                >
                  error_outline
                </i>
                24
              </div>
              <div
                class="headerTitle"
              >
                See what failed to import
              </div>
              <i
                class="material-icons mr-2 headerToggleIcon"
              >
                expand_more
              </i>
            </div>
            <div
              class="container isVertical isCollapsed"
            >
              <div
                class="collapseContent"
              >
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Articles
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Categories
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <div
            class="title"
          >
            <i
              class="warningIcon material-icons mr-2"
            >
              warning
            </i>
            The migration completely failed
          </div>
          <div
            class="mb-4"
          />
          <div
            class="actions"
          >
            <button
              aria-disabled="false"
              class="wrapper actionsButton fill primary medium"
              type="button"
            >
              <span
                class="content"
              >
                <i
                  class="material-icons mr-2"
                >
                  refresh
                </i>
                Retry
              </span>
            </button>
            <button
              aria-disabled="false"
              class="wrapper actionsButton fill secondary medium"
              type="button"
            >
              <span
                class="content"
              >
                Close
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots Connected 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Start migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-1-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrate data from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="checkInfoContainer"
          >
            <i
              class="checkIcon material-icons"
            >
              check
            </i>
            <div>
              <h4
                class="m-0"
              >
                Connected accounts
              </h4>
              <p>
                You have connected your accounts to
                 
                HelpDocs
                .
              </p>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <button
            aria-disabled="false"
            class="wrapper w-100 fill primary medium"
            type="button"
          >
            <span
              class="content"
            >
              Start migrating
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots In progress with failures 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-5-desc"
    aria-labelledby="modal-5-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-5-title"
            >
              Start migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-5-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrating from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="wrapper"
          >
            <div
              class="title"
            >
              Quick summary
            </div>
            <div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Articles
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-6-0-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    11
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-6-0-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    4
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-6-0-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    5
                  </div>
                </div>
              </div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Categories
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-6-1-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    6
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-6-1-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    4
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-2"
          />
          <div
            class="wrapper"
          >
            <div
              class="header"
            >
              <div
                class="badge headerCountBadge upperCase"
                style="border-radius: 100px;"
              >
                <i
                  class="material-icons mr-2"
                >
                  error_outline
                </i>
                9
              </div>
              <div
                class="headerTitle"
              >
                See what failed to import
              </div>
              <i
                class="material-icons mr-2 headerToggleIcon"
              >
                expand_more
              </i>
            </div>
            <div
              class="container isVertical isCollapsed"
            >
              <div
                class="collapseContent"
              >
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Articles
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Categories
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <div
            class="progressLabel"
          >
            25
            % Complete
          </div>
          <div
            class="mb-1"
          />
          <div
            class="progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="25"
              class="progress-bar progress-bar-animated progress-bar-striped"
              role="progressbar"
              style="width: 25%;"
            />
          </div>
          <div
            class="mb-4"
          />
          <button
            aria-disabled="true"
            class="wrapper w-100 fill primary medium isDisabled"
            type="button"
          >
            <svg
              class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
              height="22"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
              width="22"
            >
              <circle
                class="LoadingSpinner--dot--tnzt_"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="LoadingSpinner--circle--OnNzl"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
            <span
              class="content"
            >
              Loading
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots In progress without failures 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-3-desc"
    aria-labelledby="modal-3-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-3-title"
            >
              Start migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-3-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrating from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="wrapper"
          >
            <div
              class="title"
            >
              Quick summary
            </div>
            <div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Articles
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-4-0-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    11
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-4-0-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    7
                  </div>
                </div>
              </div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Categories
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-4-1-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    6
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-4-1-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    2
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-2"
          />
          <div
            class="mb-4"
          />
          <div
            class="progressLabel"
          >
            25
            % Complete
          </div>
          <div
            class="mb-1"
          />
          <div
            class="progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="25"
              class="progress-bar progress-bar-animated progress-bar-striped"
              role="progressbar"
              style="width: 25%;"
            />
          </div>
          <div
            class="mb-4"
          />
          <button
            aria-disabled="true"
            class="wrapper w-100 fill primary medium isDisabled"
            type="button"
          >
            <svg
              class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
              height="22"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
              width="22"
            >
              <circle
                class="LoadingSpinner--dot--tnzt_"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="LoadingSpinner--circle--OnNzl"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
            <span
              class="content"
            >
              Loading
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots Migration start loading 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-2-desc"
    aria-labelledby="modal-2-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-2-title"
            >
              Start migration
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-2-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrate data from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="checkInfoContainer"
          >
            <i
              class="checkIcon material-icons"
            >
              check
            </i>
            <div>
              <h4
                class="m-0"
              >
                Connected accounts
              </h4>
              <p>
                You have connected your accounts to
                 
                HelpDocs
                .
              </p>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <button
            aria-disabled="true"
            class="wrapper w-100 fill primary medium isDisabled"
            type="button"
          >
            <svg
              class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
              height="22"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
              width="22"
            >
              <circle
                class="LoadingSpinner--dot--tnzt_"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="LoadingSpinner--circle--OnNzl"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
            <span
              class="content"
            >
              Start migrating
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots Partially succeeded 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-9-desc"
    aria-labelledby="modal-9-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-9-title"
            >
              Migration end
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-9-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrating from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="wrapper"
          >
            <div
              class="title"
            >
              Quick summary
            </div>
            <div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Articles
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-0-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    12
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-0-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    10
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-0-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    2
                  </div>
                </div>
              </div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Categories
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-1-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    7
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-1-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    5
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-10-1-failed"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      error_outline
                    </i>
                    2
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-2"
          />
          <div
            class="wrapper"
          >
            <div
              class="header"
            >
              <div
                class="badge headerCountBadge upperCase"
                style="border-radius: 100px;"
              >
                <i
                  class="material-icons mr-2"
                >
                  error_outline
                </i>
                4
              </div>
              <div
                class="headerTitle"
              >
                See what failed to import
              </div>
              <i
                class="material-icons mr-2 headerToggleIcon"
              >
                expand_more
              </i>
            </div>
            <div
              class="container isVertical isCollapsed"
            >
              <div
                class="collapseContent"
              >
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Articles
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled article
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
                <hr
                  class="separator"
                />
                <table
                  class="section"
                >
                  <caption
                    class="sectionTitle"
                  >
                    Categories
                  </caption>
                  <thead>
                    <tr>
                      <th>
                        Row
                      </th>
                      <th>
                        Error message
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Untitled collection
                      </td>
                      <td
                        class="sectionMessage"
                      >
                        sample exception
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="mb-4"
          />
          <div
            class="title"
          >
            The migration did not fully succeed, you can:
          </div>
          <div
            class="mt-1 mb-3"
          >
            <div
              class="optionRow"
            >
              <button
                aria-disabled="false"
                class="wrapper optionButton fill primary medium"
                type="button"
              >
                <span
                  class="content"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    refresh
                  </i>
                  Retry
                </span>
              </button>
              <div
                class="optionDescription"
              >
                Start the migration again
              </div>
            </div>
            <div
              class="optionRow"
            >
              <button
                aria-disabled="false"
                class="wrapper optionButton fill destructive medium"
                type="button"
              >
                <span
                  class="content"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    delete
                  </i>
                  Revert
                </span>
              </button>
              <div
                class="optionDescription"
              >
                Remove all imported content and restore to previous state
              </div>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="wrapper w-100 fill secondary medium"
            type="button"
          >
            <span
              class="content"
            >
              End migration
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<MigrationStateModal /> snapshots Succeeded 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-7-desc"
    aria-labelledby="modal-7-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper modalHeader"
        >
          <div>
            <div
              class="title"
              id="modal-7-title"
            >
              Migration end
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper wrapper"
          id="modal-7-desc"
        >
          <div
            class="wrapper"
          >
            <img
              alt="HelpDocs"
              class="image"
              src="test-file-stub"
            />
            <i
              class="arrow material-icons"
            >
              arrow_right_alt
            </i>
            <img
              alt="Gorgias"
              class="image"
              src="test-file-stub"
            />
          </div>
          <div
            class="mb-4"
          />
          <h3
            class="text-center"
          >
            Migrating from HelpDocs to Gorgias
          </h3>
          <div
            class="mb-4"
          />
          <div
            class="wrapper"
          >
            <div
              class="title"
            >
              Quick summary
            </div>
            <div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Articles
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-8-0-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    11
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-8-0-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    11
                  </div>
                </div>
              </div>
              <div
                class="entry"
              >
                <div
                  class="entryLabel"
                >
                  Categories
                </div>
                <div
                  class="entryStats"
                >
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-8-1-exported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      upload
                    </i>
                    6
                  </div>
                  <div
                    class="badge upperCase"
                    id="quick-summary-tooltip-8-1-imported"
                    style="border-radius: 100px;"
                  >
                    <i
                      class="material-icons mr-2"
                    >
                      check_circle
                    </i>
                    6
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-2"
          />
          <div
            class="mb-4"
          />
          <div
            class="progressLabel"
          >
            100% Complete
          </div>
          <div
            class="mb-1"
          />
          <div
            class="progress progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="progress-bar"
              role="progressbar"
              style="width: 100%;"
            />
          </div>
          <div
            class="mb-4"
          />
          <button
            aria-disabled="false"
            class="wrapper w-100 fill primary medium"
            type="button"
          >
            <span
              class="content"
            >
              Finish
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
